// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BaseButton executes callback 1`] = `
<button
  className="sc-bxivhb kBfEqg sc-htpNat clPCcB sc-bwzfXH kGsEoO sc-bdVaJa gTFibi"
  onClick={[Function]}
  type="button"
>
  ButtonValue
</button>
`;

exports[`BaseButton executes callback 2`] = `
<button
  className="sc-bxivhb kBfEqg sc-htpNat clPCcB sc-bwzfXH kGsEoO sc-bdVaJa gTFibi"
  onClick={[Function]}
  type="button"
>
  ButtonValue
</button>
`;

exports[`SnippetPreviewButton executes callback 1`] = `
<button
  className="sc-ifAKCX hpLiYA sc-bxivhb kBfEqg sc-htpNat clPCcB sc-bwzfXH kGsEoO sc-bdVaJa gTFibi"
  onClick={[Function]}
  type="button"
>
  ButtonValue
</button>
`;

exports[`SnippetPreviewButton executes callback 2`] = `
<button
  className="sc-ifAKCX hpLiYA sc-bxivhb kBfEqg sc-htpNat clPCcB sc-bwzfXH kGsEoO sc-bdVaJa gTFibi"
  onClick={[Function]}
  type="button"
>
  ButtonValue
</button>
`;

exports[`the BaseButton matches the snapshot 1`] = `
<button
  className="sc-bxivhb kBfEqg sc-htpNat clPCcB sc-bwzfXH kGsEoO sc-bdVaJa gTFibi"
  type="button"
>
  ButtonValue
</button>
`;

exports[`the IconButton matches the snapshot 1`] = `
<button
  className="sc-ifAKCX hpLiYA sc-bxivhb kBfEqg sc-htpNat clPCcB sc-bwzfXH kGsEoO sc-bdVaJa gTFibi"
  icon={[Function]}
  type="button"
>
  <svg
    aria-hidden="true"
    className="sc-EHOje jJdtcA"
  />
</button>
`;

exports[`the IconButton with text matches the snapshot 1`] = `
<button
  className="sc-ifAKCX hpLiYA sc-bxivhb kBfEqg sc-htpNat clPCcB sc-bwzfXH kGsEoO sc-bdVaJa gTFibi"
  icon={[Function]}
  type="button"
>
  <svg
    aria-hidden="true"
    className="sc-bZQynM dZlBnO sc-gzVnrw lcQykj"
  />
  Click
</button>
`;

exports[`the SnippetPreviewButton matches the snapshot 1`] = `
<button
  className="sc-ifAKCX hpLiYA sc-bxivhb kBfEqg sc-htpNat clPCcB sc-bwzfXH kGsEoO sc-bdVaJa gTFibi"
  type="button"
>
  ButtonValue
</button>
`;
